Fixed Random Error "Not binding error"
*Need to fix localization for admin
*Need to add Create Student & Teacher